--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Vuga | Premium Fashion</title>
+
+    <!-- ✅ Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Georgia&family=Lato:wght@400;500;700&family=Open+Sans:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- ✅ Tailwind will pick up these fonts from tailwind.config.js -->
   </head>
-  <body>
+  <body class="bg-off-white text-charcoal font-body">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
